--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"create-hmac": "^1.1.6",
 		"crypto-js": "^3.1.9-1",
 		"deep-equal": "^1.0.1",
+		"echojs-ws": "git+ssh://git@gitlab.pixelplex.by/631_echo/echojs/echojs-ws.git#development",
 		"ecurve": "^1.0.5",
 		"event-emitter": "^0.3.4",
 		"immutable": "^3.8.1",
