--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ cache:
   - node_modules/
 
 stages:
-  - deploy
+#   - deploy
   - test
 
 test:
@@ -11,22 +11,22 @@ test:
   script:
     - npm install
     - npm run lint
-    - npm link echojs-ws
-    - npm run test
+    # - npm link echojs-ws
+    # - npm run test
   tags:
     - pp-projects
 
-build_dev:
-  stage: deploy
-  script:
-    - cd /home/devuser/DevProjects/645.echo_web/echojs/echojs-lib
-    - git pull
-    - npm install
-    - npm run build
-    - npm link
-  only:
-    - development
-  environment:
-    name: development
-  tags:
-    - pp-projects
+# build_dev:
+#   stage: deploy
+#   script:
+#     - cd /home/devuser/DevProjects/645.echo_web/echojs/echojs-lib
+#     - git pull
+#     - npm install
+#     - npm run build
+#     - npm link
+#   only:
+#     - development
+#   environment:
+#     name: development
+#   tags:
+#     - pp-projects
