--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,20 @@
-cache:
-  paths:
-  - node_modules/
-
-stages:
+# cache:
+#   paths:
+#   - node_modules/
+#
+# stages:
 #   - deploy
-  - test
+#   - test
 
-test:
-  stage: test
-  script:
-    - npm install
-    - npm run lint
-    # - npm link echojs-ws
-    # - npm run test
-  tags:
-    - pp-projects
+# test:
+#   stage: test
+#   script:
+#     - npm install
+#     - npm run lint
+#     - npm link echojs-ws
+#     - npm run test
+#   tags:
+#     - pp-projects
 
 # build_dev:
 #   stage: deploy
