--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "cross-env BABEL_ENV=test mocha --compilers js:babel-register --recursive",
-    "build": "cross-env BABEL_ENV=cjs babel lib -d dist",
-    "postinstall": "npm run-script build",
+    "prepare": "cross-env BABEL_ENV=cjs babel lib -d dist",
     "lint": "eslint .",
     "lint:debug": "npm run lint -- --debug",
     "lint:fix": "npm run lint -- --fix"
@@ -18,10 +17,6 @@
   "author": "PixelPlex",
   "license": "UNLICENSED",
   "dependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-1": "^6.16.0",
     "bigi": "^1.4.2",
     "bs58": "^4.0.1",
     "bytebuffer": "^5.0.1",
@@ -30,7 +25,7 @@
     "cross-env": "^5.0.1",
     "crypto-js": "^3.1.9-1",
     "deep-equal": "^1.0.1",
-    "echojs-ws": "0.0.2",
+    "echojs-ws": "^0.1.4",
     "ecurve": "^1.0.5",
     "event-emitter": "^0.3.4",
     "immutable": "^3.8.1",
@@ -38,19 +33,22 @@
   },
   "devDependencies": {
     "assert": "^1.3.0",
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "browserify": "^13.1.0",
+    "esdoc": "^1.1.0",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "browserify": "^13.1.0",
-    "esdoc": "^0.4.3",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.2.0",
+    "mocha": "^5.2.0",
     "rimraf": "^2.6.1",
-    "uglify": "^0.1.5",
-    "uglifyjs": "^2.4.10"
+    "uglify-js": "^3.4.4"
   }
 }
