--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "echojs-lib",
   "version": "0.1.0",
-  "description": "Pure JavaScript ECHO library for node.js and browsers",
-  "main": "./dist/index.js",
+  "description": "Pure JavaScript ECHO library for node.js",
+  "main": "./index.js",
   "scripts": {
-    "test": "cross-env BABEL_ENV=test mocha --compilers js:babel-register --recursive",
-    "prepare": "cross-env BABEL_ENV=cjs babel lib -d dist",
+    "test": "mocha --timeout 10000 --recursive",
     "lint": "eslint .",
     "lint:debug": "npm run lint -- --debug",
     "lint:fix": "npm run lint -- --fix"
@@ -25,7 +24,7 @@
     "cross-env": "^5.0.1",
     "crypto-js": "^3.1.9-1",
     "deep-equal": "^1.0.1",
-    "echojs-ws": "^0.1.4",
+    "echojs-ws": "^0.1.7",
     "ecurve": "^1.0.5",
     "event-emitter": "^0.3.4",
     "immutable": "^3.8.1",
@@ -33,20 +32,11 @@
   },
   "devDependencies": {
     "assert": "^1.3.0",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-1": "^6.16.0",
-    "browserify": "^13.1.0",
-    "esdoc": "^1.1.0",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "mkdirp": "^0.5.1",
     "mocha": "^5.2.0",
     "rimraf": "^2.6.1",
     "uglify-js": "^3.4.4"
