--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "echojs-lib",
-  "version": "0.1.10",
+  "version": "1.0.0",
   "description": "Pure JavaScript ECHO library for node.js",
   "main": "./index.js",
   "scripts": {
-    "test": "mocha --timeout 10000 --recursive",
     "lint": "eslint .",
     "lint:debug": "npm run lint -- --debug",
     "lint:fix": "npm run lint -- --fix"
@@ -16,29 +15,14 @@
   "author": "PixelPlex",
   "license": "UNLICENSED",
   "dependencies": {
-    "bigi": "^1.4.2",
-    "bs58": "^4.0.1",
-    "bytebuffer": "^5.0.1",
-    "create-hash": "^1.1.3",
-    "create-hmac": "^1.1.6",
-    "cross-env": "^5.0.1",
-    "crypto-js": "^3.1.9-1",
-    "deep-equal": "^1.0.1",
     "echojs-ws": "^0.1.9",
-    "ecurve": "^1.0.5",
-    "event-emitter": "^0.3.4",
-    "immutable": "^3.8.1",
-    "secure-random": "^1.1.1"
+    "immutable": "^3.8.1"
   },
   "devDependencies": {
-    "assert": "^1.3.0",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "mocha": "^5.2.0",
-    "rimraf": "^2.6.1",
-    "uglify-js": "^3.4.4"
+    "eslint-plugin-react": "^7.7.0"
   }
 }
