--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "license": "UNLICENSED",
   "dependencies": {
     "echojs-ws": "^0.1.9",
-    "immutable": "^3.8.1"
+    "immutable": "^3.8.1",
+    "reconnecting-websocket": "^4.1.10",
+    "ws": "^6.1.2"
   },
   "devDependencies": {
     "eslint": "^4.18.2",
