--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
-    "mocha": "^5.2.0",
+    "mocha": "^5.2.0"
   }
 }
