--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "assert": "^1.4.1",
     "bigi": "^1.4.2",
     "bs58": "^4.0.1",
+    "bytebuffer": "^5.0.1",
     "deep-equal": "^1.0.1",
     "echojs-ws": "^0.1.9",
     "ecurve": "^1.0.6",
