--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bigi": "^1.4.2",
     "bs58": "^4.0.1",
     "bytebuffer": "^5.0.1",
+    "create-hash": "^1.2.0",
+    "create-hmac": "^1.1.7",
     "deep-equal": "^1.0.1",
     "echojs-ws": "^0.1.9",
     "ecurve": "^1.0.6",
