--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "author": "PixelPlex",
   "license": "UNLICENSED",
   "dependencies": {
+    "bs58": "^4.0.1",
+    "create-hash": "^1.2.0",
     "echojs-ws": "^0.1.9",
     "immutable": "^3.8.1"
   },
   "devDependencies": {
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-import": "^2.9.0"
   }
 }
