--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bytebuffer": "^5.0.1",
     "create-hash": "^1.2.0",
     "create-hmac": "^1.1.7",
+    "crypto-js": "^3.1.9-1",
     "deep-equal": "^1.0.1",
     "echojs-ws": "^0.1.9",
     "ecurve": "^1.0.6",
