--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "assert": "^1.4.1",
     "bigi": "^1.4.2",
     "bs58": "^4.0.1",
+    "buffer": "^5.2.1",
     "bytebuffer": "^5.0.1",
     "create-hash": "^1.2.0",
     "create-hmac": "^1.1.7",
