--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pure JavaScript ECHO library for node.js",
   "main": "./index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register test/**/*.js",
+    "test": "mocha --compilers js:babel-core/register --require babel-polyfill test/**/*.js",
+    "test-api": "mocha --compilers js:babel-core/register --require babel-polyfill test/api.test.js",
     "lint": "eslint .",
     "lint:debug": "npm run lint -- --debug",
     "lint:fix": "npm run lint -- --fix"
@@ -16,7 +17,6 @@
   "author": "PixelPlex",
   "license": "UNLICENSED",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "immutable": "^3.8.1",
     "isomorphic-ws": "^4.0.1",
     "ws": "^6.1.2",
@@ -33,7 +33,11 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
