--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
   "author": "PixelPlex",
   "license": "UNLICENSED",
   "dependencies": {
-    "immutable": "^3.8.1",
-    "isomorphic-ws": "^4.0.1",
-    "ws": "^6.1.2",
     "assert": "^1.4.1",
     "bigi": "^1.4.2",
     "bs58": "^4.0.1",
     "buffer": "^5.2.1",
     "bytebuffer": "^5.0.1",
+    "chai": "^4.2.0",
     "create-hash": "^1.2.0",
     "create-hmac": "^1.1.7",
     "crypto-js": "^3.1.9-1",
     "deep-equal": "^1.0.1",
-    "ecurve": "^1.0.6"
+    "ecurve": "^1.0.6",
+    "immutable": "^3.8.1",
+    "isomorphic-ws": "^4.0.1",
+    "ws": "^6.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
