--- a/package.json
+++ b/package.json
@@ -16,28 +16,31 @@
   "author": "PixelPlex",
   "license": "UNLICENSED",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "immutable": "^3.8.1",
-    "isomorphic-ws": "^4.0.1",
-    "ws": "^6.1.2",
     "assert": "^1.4.1",
     "bigi": "^1.4.2",
     "bs58": "^4.0.1",
     "buffer": "^5.2.1",
     "bytebuffer": "^5.0.1",
+    "chai": "^4.2.0",
     "create-hash": "^1.2.0",
     "create-hmac": "^1.1.7",
     "crypto-js": "^3.1.9-1",
     "deep-equal": "^1.0.1",
-    "ecurve": "^1.0.6"
+    "ecurve": "^1.0.6",
+    "immutable": "^3.8.1",
+    "isomorphic-ws": "^4.0.1",
+    "ws": "^6.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "mocha": "^5.2.0"
   }
 }
