--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ecurve": "^1.0.6",
     "immutable": "^3.8.1",
     "isomorphic-ws": "^4.0.1",
+    "tweetnacl": "^1.0.0",
     "ws": "^6.1.2"
   },
   "devDependencies": {
