--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "immutable": "^3.8.1",
     "isomorphic-ws": "^4.0.1",
     "lodash": "^4.17.11",
+    "long": "^4.0.0",
     "ws": "^6.1.2"
   },
   "devDependencies": {
