--- a/package.json
+++ b/package.json
@@ -17,9 +17,6 @@
   "author": "PixelPlex",
   "license": "UNLICENSED",
   "dependencies": {
-    "immutable": "^3.8.1",
-    "isomorphic-ws": "^4.0.1",
-    "ws": "^6.1.2",
     "assert": "^1.4.1",
     "bigi": "^1.4.2",
     "bignumber.js": "^8.0.1",
@@ -32,7 +29,11 @@
     "deep-equal": "^1.0.1",
     "ecurve": "^1.0.6",
     "events": "^3.0.0",
-    "tweetnacl": "^1.0.0"
+    "immutable": "^3.8.1",
+    "isomorphic-ws": "^4.0.1",
+    "redux-modules": "^1.1.1",
+    "tweetnacl": "^1.0.0",
+    "ws": "^6.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
