--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "events": "^3.0.0",
     "immutable": "^3.8.1",
     "isomorphic-ws": "^4.0.1",
+    "react": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
     "redux-modules": "^1.1.1",
     "tweetnacl": "^1.0.0",
     "ws": "^6.1.2"
