Global fixes && Add typing

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "Pure JavaScript ECHO library for node.js",
 	"main": "./dist/index.js",
+	"types": "./types/index.d.ts",
 	"scripts": {
 		"test": "mocha --require babel-core/register --require babel-polyfill --exit",
 		"test-subscriber": "mocha --compilers js:babel-core/register --require babel-polyfill test/subscriber.test.js",
@@ -38,6 +39,7 @@
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.3",
+		"babel-plugin-transform-runtime": "^6.23.0",
 		"babel-polyfill": "^6.26.0",
 		"babel-preset-latest": "^6.24.1",
 		"babel-preset-stage-3": "^6.24.1",
