--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
-	"presets": [
-		"stage-3",
-		"latest"
-	]
+	"presets": ["stage-3", "latest"],
+	"plugins": [
+		["transform-runtime", { "polyfill": false, "regenerator": true } ],
+	],
 }
