--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "./dist/index.js",
 	"types": "./types/index.d.ts",
 	"scripts": {
+		"postinstall": "npm run build",
 		"test": "mocha --require babel-core/register --require babel-polyfill --exit",
 		"test-api": "mocha --compilers js:babel-core/register --require babel-polyfill test/api.test.js",
 		"test-subscriber": "mocha --compilers js:babel-core/register --require babel-polyfill test/subscriber.test.js",
@@ -13,7 +14,7 @@
 		"lint": "eslint .",
 		"lint:debug": "npm run lint -- --debug",
 		"lint:fix": "npm run lint -- --fix",
-	    "jsdoc2md": "jsdoc2md src/echo/api.js > api.md"
+		"jsdoc2md": "jsdoc2md src/echo/api.js > api.md"
 	},
 	"repository": {
 		"type": "git",
@@ -56,6 +57,6 @@
 		"eslint-plugin-react": "^7.11.1",
 		"mocha": "^5.2.0",
 		"redux": "^4.0.1",
-	    "jsdoc-to-markdown": "^4.0.1"
+		"jsdoc-to-markdown": "^4.0.1"
 	}
 }
