--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"license": "UNLICENSED",
 	"dependencies": {
 		"assert": "^1.4.1",
+		"babel-runtime": "^6.26.0",
 		"bigi": "^1.4.2",
 		"bignumber.js": "^8.0.1",
 		"bs58": "^4.0.1",
