--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"babel-core": "^6.26.3",
 		"babel-plugin-transform-runtime": "^6.23.0",
 		"babel-polyfill": "^6.26.0",
+		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-latest": "^6.24.1",
 		"babel-preset-stage-3": "^6.24.1",
 		"chai": "^4.2.0",
@@ -56,8 +57,8 @@
 		"eslint-plugin-import": "^2.9.0",
 		"eslint-plugin-jsx-a11y": "^6.1.2",
 		"eslint-plugin-react": "^7.11.1",
+		"jsdoc-to-markdown": "^4.0.1",
 		"mocha": "^5.2.0",
-		"redux": "^4.0.1",
-		"jsdoc-to-markdown": "^4.0.1"
+		"redux": "^4.0.1"
 	}
 }
