--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
 	"author": "PixelPlex",
 	"license": "UNLICENSED",
 	"dependencies": {
+		"babel-core": "^6.26.3",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-polyfill": "^6.26.0",
+		"babel-preset-latest": "^6.24.1",
+		"babel-preset-stage-3": "^6.24.1",
 		"assert": "^1.4.1",
 		"babel-runtime": "^6.26.0",
 		"bigi": "^1.4.2",
@@ -44,12 +49,6 @@
 		"ws": "^6.1.2"
 	},
 	"devDependencies": {
-		"babel-core": "^6.26.3",
-		"babel-plugin-transform-runtime": "^6.23.0",
-		"babel-polyfill": "^6.26.0",
-		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-latest": "^6.24.1",
-		"babel-preset-stage-3": "^6.24.1",
 		"chai": "^4.2.0",
 		"chai-spies": "^1.0.0",
 		"eslint": "^4.18.2",
@@ -57,8 +56,8 @@
 		"eslint-plugin-import": "^2.9.0",
 		"eslint-plugin-jsx-a11y": "^6.1.2",
 		"eslint-plugin-react": "^7.11.1",
-		"jsdoc-to-markdown": "^4.0.1",
 		"mocha": "^5.2.0",
-		"redux": "^4.0.1"
+		"redux": "^4.0.1",
+		"jsdoc-to-markdown": "^4.0.1"
 	}
 }
