--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-	"presets": ["stage-3", "latest"],
+	"presets": ["es2015", "stage-3", "latest"],
 	"plugins": [
 		["transform-runtime", { "polyfill": false, "regenerator": true } ],
 	],
