--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"test": "mocha --require babel-core/register --require babel-polyfill --exit",
 		"test-api": "mocha --compilers js:babel-core/register --require babel-polyfill test/api.test.js",
 		"test-subscriber": "mocha --compilers js:babel-core/register --require babel-polyfill test/subscriber.test.js",
-		"build": "npx babel-cli src --out-dir dist",
+		"build": "babel src --out-dir dist",
 		"prepublishOnly": "npm run build",
 		"lint": "eslint .",
 		"lint:debug": "npm run lint -- --debug",
@@ -49,6 +49,8 @@
 		"ws": "^6.1.2"
 	},
 	"devDependencies": {
+		"babel-cli": "^6.26.0",
+		"babel-preset-es2015": "^6.24.1",
 		"chai": "^4.2.0",
 		"chai-spies": "^1.0.0",
 		"eslint": "^4.18.2",
@@ -56,8 +58,8 @@
 		"eslint-plugin-import": "^2.9.0",
 		"eslint-plugin-jsx-a11y": "^6.1.2",
 		"eslint-plugin-react": "^7.11.1",
+		"jsdoc-to-markdown": "^4.0.1",
 		"mocha": "^5.2.0",
-		"redux": "^4.0.1",
-		"jsdoc-to-markdown": "^4.0.1"
+		"redux": "^4.0.1"
 	}
 }
