--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"test": "mocha --require babel-core/register --require babel-polyfill --exit",
 		"test-api": "mocha --compilers js:babel-core/register --require babel-polyfill test/api.test.js",
 		"test-subscriber": "mocha --compilers js:babel-core/register --require babel-polyfill test/subscriber.test.js",
-		"build": "babel src --out-dir dist",
+		"build": "npx babel-cli src --out-dir dist",
 		"prepublishOnly": "npm run build",
 		"lint": "eslint .",
 		"lint:debug": "npm run lint -- --debug",
