Change CI tag (echo-linux => pp-shell)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,12 +12,12 @@ test:
     paths:
       - node_modules
   tags:
-    - echo-linux
+    - pp-shell
 
 publish:
   stage: deploy
   tags:
-    - echo-linux
+    - pp-shell
   only:
     - tags
   script:
