--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-	"presets": ["stage-3", "latest"],
-	"plugins": [
-		["transform-runtime", { "polyfill": false, "regenerator": true } ],
-	],
+  "presets": ["@babel/preset-env"],
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
