--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
 	"types": "./types/index.d.ts",
 	"scripts": {
 		"prepare": "npm run build",
-		"test": "mocha --require babel-core/register --require babel-polyfill --exit",
-		"test-api": "mocha --compilers js:babel-core/register --require babel-polyfill test/api.test.js",
-		"test-subscriber": "mocha --compilers js:babel-core/register --require babel-polyfill test/subscriber.test.js",
-		"build": "npx babel-cli src --out-dir dist",
+		"test": "mocha --compilers js:@babel/register --require @babel/polyfill  --exit",
+		"test-api": "mocha --compilers js:@babel/register --require @babel/polyfill test/api.test.js",
+		"test-subscriber": "mocha --compilers js:@babel/register --require @babel/polyfill test/subscriber.test.js",
+		"build": "npx babel src --out-dir dist",
 		"lint": "eslint .",
 		"lint:debug": "npm run lint -- --debug",
 		"lint:fix": "npm run lint -- --fix"
@@ -25,13 +25,9 @@
 	"author": "PixelPlex",
 	"license": "MIT",
 	"dependencies": {
+		"@babel/cli": "^7.2.3",
+		"@babel/polyfill": "^7.2.5",
 		"assert": "^1.4.1",
-		"babel-core": "^6.26.3",
-		"babel-plugin-transform-runtime": "^6.23.0",
-		"babel-polyfill": "^6.26.0",
-		"babel-preset-latest": "^6.24.1",
-		"babel-preset-stage-3": "^6.24.1",
-		"babel-runtime": "^6.26.0",
 		"bigi": "^1.4.2",
 		"bignumber.js": "^8.0.1",
 		"bs58": "^4.0.1",
@@ -51,8 +47,11 @@
 		"ws": "^6.1.2"
 	},
 	"devDependencies": {
-		"babel-cli": "^6.26.0",
-		"babel-preset-es2015": "^6.24.1",
+		"@babel/core": "^7.2.2",
+		"@babel/register": "^7.0.0",
+		"@babel/runtime": "^7.3.1",
+		"@babel/plugin-transform-runtime": "^7.2.0",
+		"@babel/preset-env": "^7.3.1",
 		"chai": "^4.2.0",
 		"chai-spies": "^1.0.0",
 		"eslint": "^4.18.2",
