--- a/package.json
+++ b/package.json
@@ -25,9 +25,15 @@
 	"author": "PixelPlex",
 	"license": "MIT",
 	"dependencies": {
+		"assert": "^1.4.1",
+		"babel-core": "^6.26.3",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-polyfill": "^6.26.0",
+		"babel-preset-latest": "^6.24.1",
+		"babel-preset-stage-3": "^6.24.1",
+		"babel-runtime": "^6.26.0",
 		"@babel/cli": "^7.2.3",
 		"@babel/polyfill": "^7.2.5",
-		"assert": "^1.4.1",
 		"bigi": "^1.4.2",
 		"bignumber.js": "^8.0.1",
 		"bs58": "^4.0.1",
