--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "deep-equal": "^1.0.1",
     "echojs-ws": "^0.1.9",
     "ecurve": "^1.0.5",
+    "ed25519.js": "^1.3.0",
     "event-emitter": "^0.3.4",
     "immutable": "^3.8.1",
     "secure-random": "^1.1.1"
   },
   "devDependencies": {
     "assert": "^1.3.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-1": "^6.24.1",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
