--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "echojs-lib",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "description": "Pure JavaScript ECHO library for node.js",
   "main": "./index.js",
   "scripts": {
@@ -24,7 +24,7 @@
     "cross-env": "^5.0.1",
     "crypto-js": "^3.1.9-1",
     "deep-equal": "^1.0.1",
-    "echojs-ws": "^0.1.9",
+    "echojs-ws": "0.1.15",
     "ecurve": "^1.0.5",
     "ed25519.js": "^1.3.0",
     "event-emitter": "^0.3.4",
