--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@babel/cli": "^7.2.3",
 		"@babel/polyfill": "^7.2.5",
 		"@babel/runtime": "^7.3.1",
+		"@types/bigi": "^1.4.2",
 		"assert": "^1.4.1",
 		"bigi": "^1.4.2",
 		"bignumber.js": "^8.0.1",
