--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
 	"license": "MIT",
 	"dependencies": {
 		"@babel/cli": "^7.2.3",
+		"@babel/core": "^7.2.2",
 		"@babel/polyfill": "^7.2.5",
 		"@babel/runtime": "^7.3.1",
-		"@babel/core": "^7.2.2",
 		"assert": "^1.4.1",
 		"bigi": "^1.4.2",
 		"bignumber.js": "^8.0.1",
@@ -58,7 +58,7 @@
 		"eslint-config-airbnb": "^16.1.0",
 		"eslint-plugin-import": "^2.9.0",
 		"eslint-plugin-jsx-a11y": "^6.1.2",
-		"eslint-plugin-react": "^7.11.1",
+		"eslint-plugin-react": "7.13.0",
 		"mocha": "^5.2.0",
 		"redux": "^4.0.1"
 	}
