--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@babel/core": "^7.2.2",
 		"@babel/polyfill": "^7.2.5",
 		"@babel/runtime": "^7.3.1",
+		"@types/node": "^12.0.10",
 		"assert": "^1.4.1",
 		"bigi": "^1.4.2",
 		"bignumber.js": "^8.0.1",
@@ -46,12 +47,14 @@
 		"isomorphic-ws": "^4.0.1",
 		"lodash": "^4.17.11",
 		"long": "^4.0.0",
+		"typescript": "^3.5.2",
 		"ws": "^6.2.0"
 	},
 	"devDependencies": {
-		"@babel/register": "^7.0.0",
 		"@babel/plugin-transform-runtime": "^7.2.0",
 		"@babel/preset-env": "^7.3.1",
+		"@babel/register": "^7.0.0",
+		"@types/bytebuffer": "^5.0.40",
 		"chai": "^4.2.0",
 		"chai-spies": "^1.0.0",
 		"eslint": "^4.18.2",
