--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"@babel/preset-env": "^7.3.1",
 		"@babel/register": "^7.0.0",
 		"@types/bytebuffer": "^5.0.40",
+		"audit-ci": "^2.2.0",
 		"chai": "^4.2.0",
 		"chai-spies": "^1.0.0",
 		"eslint": "^4.18.2",
