--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ node_js:
 
 before_install:
   - docker pull echoprotocol/echo:v0.8.2
-  - echo $PWD
-  - docker run --name echotest -p 6311:6311 -v ./.test/genesis_devnet.json:/echo/genesis_devnet.json -v ./.test/access.json:/echo/access.json echoprotocol/echo:v0.8.3 --devnet --start-echorand --account-info="[\"1.2.6\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]" --account-info="[\"1.2.7\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]" --account-info="[\"1.2.8\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]" --account-info="[\"1.2.9\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]" --account-info="[\"1.2.10\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]" --rpc-endpoint=0.0.0.0:6311 --plugins=registration --api-access=/echo/access.json
+  - docker run --name echotest -p 6311:6311 -v $PWD/.test/genesis_devnet.json:/echo/genesis_devnet.json -v $PWD/.test/access.json:/echo/access.json echoprotocol/echo:v0.8.3 --devnet --start-echorand --account-info="[\"1.2.6\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]" --account-info="[\"1.2.7\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]" --account-info="[\"1.2.8\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]" --account-info="[\"1.2.9\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]" --account-info="[\"1.2.10\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]" --rpc-endpoint=0.0.0.0:6311 --plugins=registration --api-access=/echo/access.json
 
 jobs:
   include:
