Try deploy to npm

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,12 @@ jobs:
         - audit-ci --moderate
         - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm test; fi'
     - stage: deploy
-      if: tag IS present
+#      if: tag IS present
       name: "Deploy to npm"
       script: echo "Deploy to npm"
       deploy:
         provider: npm
         email: $NPM_EMAIL
         api_key: $NPM_TOKEN
-        on:
-          tags: true
+#        on:
+#          tags: true
