--- a/.test/docker-compose.yml
+++ b/.test/docker-compose.yml
@@ -2,8 +2,8 @@ version: "2"
 
 services:
   echo:
-    image: echoprotocol/echo:v0.8.2
-    command:  --devnet --start-echorand
+    image: echoprotocol/echo:v0.9.0-rc.1
+    command:  --testnet --start-echorand
       --account-info="[\"1.2.6\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]"
       --account-info="[\"1.2.7\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]"
       --account-info="[\"1.2.8\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]"
@@ -13,5 +13,5 @@ services:
     ports:
       - 6311:6311
     volumes:
-      - ./genesis_devnet.json:/echo/genesis_devnet.json
+      - ./genesis.json:/echo/genesis_testnet.json
       - ./access.json:/echo/access.json
