--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@babel/core": "^7.2.2",
 		"@babel/polyfill": "^7.2.5",
 		"@babel/runtime": "^7.3.1",
+		"@types/crypto-js": "^3.1.43",
 		"@types/node": "^12.0.10",
 		"assert": "^1.4.1",
 		"bigi": "^1.4.2",
