--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"test-api": "mocha --compilers js:@babel/register --require @babel/polyfill test/api.test.js",
 		"test-subscriber": "mocha --compilers js:@babel/register --require @babel/polyfill test/subscriber.test.js",
 		"build": "npx babel src --out-dir dist",
+		"check-typing": "npx tsc",
 		"lint": "eslint .",
 		"lint:debug": "npm run lint -- --debug",
 		"lint:fix": "npm run lint -- --fix"
@@ -48,7 +49,6 @@
 		"isomorphic-ws": "^4.0.1",
 		"lodash": "^4.17.11",
 		"long": "^4.0.0",
-		"typescript": "^3.5.2",
 		"ws": "^7.1.1"
 	},
 	"devDependencies": {
@@ -66,6 +66,7 @@
 		"eslint-plugin-jsx-a11y": "^6.1.2",
 		"eslint-plugin-react": "7.13.0",
 		"mocha": "^5.2.0",
-		"redux": "^4.0.1"
+		"redux": "^4.0.1",
+		"typescript": "^3.5.3"
 	}
 }
