--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "echojs-lib",
-	"version": "1.6.0-rc.3",
+	"version": "1.6.0",
 	"description": "Pure JavaScript ECHO library for node.js",
 	"main": "./dist/index.js",
 	"types": "./types/index.d.ts",
