--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
       before_install:
         - docker pull echoprotocol/echo:v0.8.2
         - docker pull echoprotocol/echo-wallet:v0.9.0-rc.1
-        - docker-compose up -d
+        - docker-compose -f ./.test/docker-compose.yml up
       script:
         - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm test; fi'
     - stage: deploy
