--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "echojs-lib",
-	"version": "1.6.1",
+	"version": "1.6.2",
 	"description": "Pure JavaScript ECHO library for node.js",
 	"main": "./dist/index.js",
 	"types": "./types/index.d.ts",
 	"scripts": {
-		"pretest": "babel-node ./test/preparation/preparation.js",
+		"pretest": "npm run build && babel-node ./test/preparation/preparation.js",
 		"test": "mocha --require @babel/register --require @babel/polyfill --exit",
 		"test-api": "mocha --compilers js:@babel/register --require @babel/polyfill test/api.test.js",
 		"test-subscriber": "mocha --compilers js:@babel/register --require @babel/polyfill test/subscriber.test.js",
