--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"test": "mocha --require @babel/register --require @babel/polyfill --exit",
 		"test-api": "mocha --compilers js:@babel/register --require @babel/polyfill test/api.test.js",
 		"test-subscriber": "mocha --compilers js:@babel/register --require @babel/polyfill test/subscriber.test.js",
+		"test-contract": "mocha --compilers js:@babel/register --require @babel/polyfill test/contract/Contract.test.js",
 		"build": "npx babel src --out-dir dist",
 		"check-typing": "npx tsc",
 		"lint": "eslint .",
@@ -52,7 +53,10 @@
 		"immutable": "^3.8.1",
 		"isomorphic-ws": "^4.0.1",
 		"lodash": "^4.17.11",
-		"ws": "^7.1.1"
+		"ws": "^7.1.1",
+
+		"comprehension": "^1.1.2",
+		"js-sha3": "^0.8.0"
 	},
 	"devDependencies": {
 		"@babel/node": "^7.5.5",
@@ -70,6 +74,8 @@
 		"eslint-plugin-react": "7.13.0",
 		"mocha": "^5.2.0",
 		"redux": "^4.0.1",
-		"typescript": "^3.5.3"
+		"typescript": "^3.5.3",
+
+		"fs-extra": "^7.0.1"
 	}
 }
