--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"test": "mocha --require @babel/register --require @babel/polyfill --exit",
 		"test-api": "mocha --compilers js:@babel/register --require @babel/polyfill test/api.test.js",
 		"test-subscriber": "mocha --compilers js:@babel/register --require @babel/polyfill test/subscriber.test.js",
-		"test-contract": "mocha --compilers js:@babel/register --require @babel/polyfill test/contract/index.test.js",
+		"test-contract": "mocha --compilers js:@babel/register --require @babel/polyfill test/contract.test.js",
 		"build": "npx babel src --out-dir dist",
 		"check-typing": "npx tsc",
 		"lint": "eslint .",
@@ -56,7 +56,6 @@
 		"isomorphic-ws": "^4.0.1",
 		"js-sha3": "^0.8.0",
 		"lodash": "^4.17.11",
-		"solc": "^0.4.23",
 		"ws": "^7.1.1"
 	},
 	"devDependencies": {
@@ -76,6 +75,6 @@
 		"mocha": "^5.2.0",
 		"redux": "^4.0.1",
 		"typescript": "^3.5.3",
-		"fs-extra": "^7.0.1"
+		"fs-extra": "^7.0.1",
 	}
 }
