--- a/.test/docker-compose.yml
+++ b/.test/docker-compose.yml
@@ -20,3 +20,17 @@ services:
     volumes:
       - ./genesis.json:/echo/genesis.json
       - ./access.json:/echo/access.json
+
+  echo-wallet:
+    image: echoprotocol/echo-wallet:v0.9.0-rc.1
+    command:
+      -s ws://echo:6311/ws
+      --chain-id="185b13385eeba45f7805738c476c0e8ca9b90b9d0dc92ce1c737a6ada53d006a"
+      --wallet-file="/echo/walletdata/wallet.json"
+      --history-file="/echo/walletdata/history"
+      -r 0.0.0.0:8888
+    ports:
+      - 8888:8888
+    tty: true
+    links:
+      - echo
