--- a/package.json
+++ b/package.json
@@ -30,10 +30,7 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@babel/cli": "^7.2.3",
-		"@babel/core": "^7.2.2",
-		"@babel/polyfill": "^7.2.5",
-		"@babel/runtime": "^7.3.1",
+		"@babel/runtime-corejs3": "^7.6.0",
 		"@types/crypto-js": "^3.1.43",
 		"@types/node": "^12.0.10",
 		"assert": "^1.4.1",
@@ -55,8 +52,10 @@
 		"ws": "^7.1.1"
 	},
 	"devDependencies": {
+		"@babel/cli": "^7.2.3",
+		"@babel/core": "^7.2.2",
 		"@babel/node": "^7.5.5",
-		"@babel/plugin-transform-runtime": "^7.2.0",
+		"@babel/plugin-transform-runtime": "^7.6.0",
 		"@babel/preset-env": "^7.3.1",
 		"@babel/register": "^7.0.0",
 		"@types/bytebuffer": "^5.0.40",
