--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"bs58": "^4.0.1",
 		"buffer": "^5.2.1",
 		"bytebuffer": "^5.0.1",
+		"clone-deep": "^4.0.1",
 		"comprehension": "^1.1.2",
 		"create-hash": "^1.2.0",
 		"create-hmac": "^1.1.7",
@@ -54,7 +55,6 @@
 		"immutable": "^3.8.1",
 		"isomorphic-ws": "^4.0.1",
 		"js-sha3": "^0.8.0",
-		"lodash": "^4.17.11",
 		"ws": "^7.1.1"
 	},
 	"devDependencies": {
