--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ stages:
 
 jobs:
   include:
-    - stage: audit
-      if: tag IS blank
-      name: "Test lint and audit"
-      script:
-        - npm run lint
-        - audit-ci --moderate
+#    - stage: audit
+#      if: tag IS blank
+#      name: "Test lint and audit"
+#      script:
+#        - npm run lint
+#        - audit-ci --moderate
     - stage: test
       if: type = pull_request
       name: "Run unit testing"
@@ -24,6 +24,7 @@ jobs:
         - docker
       before_install:
         - docker-compose -f ./.test/docker-compose.yml up -d
+        - docker ps
       script:
         - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm test; fi'
     - stage: deploy
