--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ jobs:
       services:
         - docker
       before_install:
-        - docker-compose -f ./.test/docker-compose.yml up echo -d
-        - docker-compose -f ./.test/docker-compose.yml up echo-wallet -d
+        - docker-compose -f ./.test/docker-compose.yml up -d echo
+        - docker-compose -f ./.test/docker-compose.yml up -d echo-wallet
         - docker ps
       script:
         - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm test; fi'
