--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ jobs:
         - docker
       before_install:
         - docker-compose -f ./.test/docker-compose.yml up -d echo
-        - docker-compose -f ./.test/docker-compose.yml up -d echo-wallet
+        - docker-compose -f ./.test/docker-compose.yml up echo-wallet
         - docker ps
       script:
         - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm test; fi'
