--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ jobs:
         - docker-compose -f ./.test/docker-compose.yml up -d echo
         - docker logs echo
         - sleep 10
-        - curl 127.0.0.1:6311
-        - docker-compose -f ./.test/docker-compose.yml up echo-wallet
+        - docker-compose -f ./.test/docker-compose.yml up -d echo-wallet
+        - docker logs echo-wallet
         - docker ps
       script:
         - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm test; fi'
