[ECHOJS-171] add husky

--- a/package.json
+++ b/package.json
@@ -67,8 +67,14 @@
 		"eslint-plugin-import": "^2.9.0",
 		"eslint-plugin-jsx-a11y": "^6.1.2",
 		"eslint-plugin-react": "7.13.0",
+		"husky": "^2.7.0",
 		"mocha": "^5.2.0",
 		"redux": "^4.0.1",
 		"typescript": "^3.5.3"
+	},
+	"husky": {
+		"hooks": {
+		  "pre-commit": "npm run lint"
+		}
 	}
 }
