add login and rename  variable

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ stages:
   - test
   - deploy
 
+before_install:
+  - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
 
 jobs:
   include:
