--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "echojs-lib",
-	"version": "1.12.0",
+	"version": "1.12.1rc-1?",
 	"description": "Pure JavaScript ECHO library for node.js",
 	"main": "./dist/index.js",
 	"types": "./types/index.d.ts",
